--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,7 +43,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/application_terminal" >
         <activity
-            android:name="com.androidesk.wifiadb.MainActivity"
+            android:name="com.adblog.wifiadb.MainActivity"
             android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,7 +52,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.androidesk.term.Term"
+            android:name="com.adblog.term.Term"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:launchMode="singleTask"
             android:theme="@style/Theme"
@@ -62,7 +62,7 @@
         <activity-alias
             android:name="TermInternal"
             android:exported="false"
-            android:targetActivity="com.androidesk.term.Term" >
+            android:targetActivity="com.adblog.term.Term" >
             <intent-filter>
                 <action android:name="jackpal.androidterm.private.OPEN_NEW_WINDOW" />
 
@@ -76,7 +76,7 @@
         </activity-alias>
 
         <activity
-            android:name="com.androidesk.term.RemoteInterface"
+            android:name="com.adblog.term.RemoteInterface"
             android:excludeFromRecents="true" >
             <intent-filter>
                 <action android:name="jackpal.androidterm.OPEN_NEW_WINDOW" />
@@ -88,7 +88,7 @@
         <activity-alias
             android:name="RunScript"
             android:permission="jackpal.androidterm.permission.RUN_SCRIPT"
-            android:targetActivity="com.androidesk.term.RemoteInterface" >
+            android:targetActivity="com.adblog.term.RemoteInterface" >
             <intent-filter>
                 <action android:name="jackpal.androidterm.RUN_SCRIPT" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -96,23 +96,23 @@
         </activity-alias>
 
         <activity
-            android:name="com.androidesk.term.TermPreferences"
+            android:name="com.adblog.term.TermPreferences"
             android:label="@string/preferences" />
         <activity
-            android:name="com.androidesk.term.WindowList"
+            android:name="com.adblog.term.WindowList"
             android:label="@string/window_list" />
 
-        <service android:name="com.androidesk.term.TermService" />
+        <service android:name="com.adblog.term.TermService" />
 
-        <activity android:name="com.androidesk.control.HightToolActivity" >
+        <activity android:name="com.adblog.control.HightToolActivity" >
         </activity>
         <activity
-            android:name="com.androidesk.control.WebViewActivity"
+            android:name="com.adblog.control.WebViewActivity"
             android:launchMode="singleTask" 
             android:noHistory="true" >
         </activity>
         <activity
-            android:name="com.androidesk.control.ControlUrlsActivity"
+            android:name="com.adblog.control.ControlUrlsActivity"
             android:launchMode="singleTask" >
         </activity>
     </application>
